--- a/css/first_page.css
+++ b/css/first_page.css
@@ -1,3 +1,7 @@
+a {
+  cursor: pointer;
+}
+
 .first-page {
   height: calc(80vh - 75px);
   width: 100%;
@@ -7,40 +11,43 @@
   background-color: rgba(0, 0, 0, 0.5);
   width: 500px;
   height: 250px;
-  margin-top: auto;
-  margin-bottom: auto;
+  top: 50%;
+  transform: translate(0, -50%);
   padding: 40px 40px 40px 200px;
   position: absolute;
   z-index: 5;
-  top: calc(50% - 75px);
 }
 .first-page .text-container h1 {
   color: #ffffff;
 }
 .first-page .text-container p {
-  color: gray;
+  color: white;
   margin-top: 12px;
+  font-weight: 300;
+  line-height: 24px;
+  font-size: 16px;
 }
-
-.swiper {
+.first-page .swiper {
   width: 100%;
   height: 100%;
   position: relative;
 }
-.swiper .swiper-wrapper {
+.first-page .swiper .swiper-wrapper {
   width: 100%;
   height: 100%;
 }
-.swiper .swiper-wrapper .swiper-slide {
+.first-page .swiper .swiper-wrapper .swiper-slide {
+  width: 100%;
+  height: 100%;
+  background-image: url("../slike/image14.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.first-page .swiper .swiper-wrapper .swiper-slide img {
   width: 100%;
   height: 100%;
 }
-.swiper .swiper-wrapper .swiper-slide img {
-  width: 100vw;
-  height: 100%;
-}
-
-.swiper-btn {
+.first-page .swiper-btn {
   position: absolute;
   bottom: 50px;
   right: 50%;
@@ -48,10 +55,9 @@
   width: 100%;
   height: fit-content;
 }
-.swiper-btn .swiper-button-next {
+.first-page .swiper-btn .swiper-button-next {
   left: 106%;
   border-radius: 100%;
-  background-color: black;
   width: 25px;
   height: 25px;
   text-align: center;
@@ -60,10 +66,9 @@
   border: 1px solid white;
   --swiper-navigation-size: 15px;
 }
-.swiper-btn .swiper-button-prev {
+.first-page .swiper-btn .swiper-button-prev {
   left: 95%;
   border-radius: 100%;
-  background-color: black;
   width: 25px;
   height: 25px;
   text-align: center;
@@ -72,26 +77,80 @@
   border: 1px solid white;
   --swiper-navigation-size: 15px;
 }
-.swiper-btn .swiper-pagination-bullets.swiper-pagination-horizontal {
+.first-page .swiper-btn .swiper-pagination-bullets.swiper-pagination-horizontal {
   left: 52%;
   width: 100%;
-  bottom: -20px;
-  transform: rotate(180deg);
+  bottom: -15px;
+  transform: rotate(0deg);
 }
-.swiper-btn .swiper-pagination-bullet {
+.first-page .swiper-btn .swiper-pagination-bullet {
   background-color: white;
   opacity: 1;
 }
-.swiper-btn .swiper-pagination-bullet-active {
+.first-page .swiper-btn .swiper-pagination-bullet-active {
   background-color: #b50014;
   border: 1px solid white;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
   .first-page {
-    height: 45vh;
+    height: 50vh;
+  }
+  .first-page .swiper-btn {
+    position: absolute;
+    bottom: 50px;
+    right: 50%;
+    z-index: 5;
+    width: 100%;
+    height: fit-content;
+  }
+  .first-page .swiper-btn .swiper-button-next {
+    left: 109%;
+    border-radius: 100%;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    color: white;
+    font-size: 10%;
+    border: 1px solid white;
+    --swiper-navigation-size: 15px;
+  }
+  .first-page .swiper-btn .swiper-button-prev {
+    left: 93%;
+    border-radius: 100%;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    color: white;
+    font-size: 10%;
+    border: 1px solid white;
+    --swiper-navigation-size: 15px;
+  }
+  .first-page .swiper-btn .swiper-pagination-bullets.swiper-pagination-horizontal {
+    left: 52%;
+    width: 100%;
+    bottom: -15px;
+    transform: rotate(0deg);
+  }
+  .first-page .swiper-btn .swiper-pagination-bullet {
+    background-color: white;
+    opacity: 1;
+  }
+  .first-page .swiper-btn .swiper-pagination-bullet-active {
+    background-color: #b50014;
+    border: 1px solid white;
   }
   .hide-on-small {
     display: none;
+  }
+}
+@media (min-width: 1000px) {
+  .first-page {
+    height: 70vh;
+  }
+  .first-page .text-container {
+    width: 400px;
+    height: 250px;
+    padding: 40px 40px 40px 100px;
   }
 }
