--- a/css/nav.css
+++ b/css/nav.css
@@ -1,3 +1,4 @@
+/* MOBILNI UREDJAJI */
 nav {
   z-index: 10;
   position: absolute;
@@ -7,7 +8,7 @@ nav {
   display: flex;
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 1000px) {
   nav {
     display: flex;
     flex-direction: row;
@@ -27,9 +28,6 @@ nav {
     list-style: none;
     height: 100%;
     align-items: center;
-  }
-  ul li {
-    margin-inline: 1px;
   }
   ul li a {
     color: #fff;
@@ -58,10 +56,13 @@ nav {
   .nav-time {
     display: flex;
     flex-direction: row;
-    margin-left: auto;
+    margin-left: 53%;
     color: white;
     width: fit-content;
-    margin-right: 15px;
+    margin-right: 1.5%;
+  }
+  .nav-time span i {
+    margin-right: 5px;
   }
 }
 @media (min-width: 1300px) {
@@ -73,7 +74,20 @@ nav {
     margin-right: 20px;
   }
 }
-@media (min-width: 1100px) and (max-width: 1299px) {
+@media (min-width: 1000px) and (max-width: 1100px) {
+  ul li {
+    margin-right: -10px;
+  }
+  .nav-time {
+    display: flex;
+    flex-direction: row;
+    margin-left: 52%;
+    color: white;
+    width: fit-content;
+    margin-right: 0.5%;
+  }
+}
+@media (min-width: 1000px) and (max-width: 1299px) {
   .nav-divider {
     flex-direction: row;
     width: fit-content;
@@ -84,6 +98,14 @@ nav {
     align-items: start;
     margin: 0;
   }
+  .nav-time {
+    display: flex;
+    flex-direction: row;
+    margin-left: 52%;
+    color: white;
+    width: fit-content;
+    margin-right: 1.5%;
+  }
   ul li {
     width: 100px;
     display: flex;
@@ -91,8 +113,7 @@ nav {
     align-items: center;
   }
 }
-/* MOBILNI UREDJAJI */
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
   nav {
     display: flex;
     flex-direction: row;
@@ -128,19 +149,9 @@ nav {
     background-color: rgba(0, 0, 0, 0.5);
     transform: translateX(100%);
   }
-  ul.active {
-    transform: translateX(0);
-  }
-  .nav-divider {
-    display: flex;
-    flex-direction: column;
-  }
   ul li {
     width: 100%;
     height: 50px;
-  }
-  ul .nav-divider:first-child {
-    margin-top: 60px;
   }
   ul li a {
     text-decoration: none;
@@ -151,6 +162,16 @@ nav {
   }
   ul li a:focus {
     color: #b50014;
+  }
+  ul .nav-divider:first-child {
+    margin-top: 60px;
+  }
+  ul.active {
+    transform: translateX(0);
+  }
+  .nav-divider {
+    display: flex;
+    flex-direction: column;
   }
   .nav-underline {
     display: flex;
