--- a/css/second_page.css
+++ b/css/second_page.css
@@ -52,7 +52,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-inline: 50px;
   margin-top: 60px;
 }
 .button-container a {
@@ -79,25 +78,32 @@
   width: 65%;
   height: 100%;
   display: block;
+  margin-left: 20px;
 }
 
 .big-image {
   height: 66.6%;
+  margin-bottom: 8px;
+}
+.big-image img {
+  height: 100%;
+  width: 100%;
 }
 
 .small-images-container {
   display: flex;
 }
 .small-images-container img {
+  margin-right: 8px;
   width: 33.3%;
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 1000px) {
   .hide-on-big {
     display: none;
   }
 }
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
   .hide {
     display: none;
   }
@@ -127,6 +133,7 @@
   .second-page-text-container p {
     margin-top: 10px;
     padding-bottom: 3px;
+    font-size: 16px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -136,12 +143,19 @@
     text-align: center;
   }
   .second-page-text-container h1 {
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    font-size: 32px;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 42px;
+  }
+  .second-page-text-container h1:nth-child(2) {
+    font-size: 38px;
+    margin-bottom: 20px;
   }
   .second-page-text-container h2 {
     font-size: 22px;
