--- a/css/third_page.css
+++ b/css/third_page.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+/* MOBILE RESPONSIVE */
+/* ------ END MOBILE RESPONSIVE ------ */
+/* DESKTOP RESPONSIVE */
+/* ------ END DESKTOP RESPONSIVE ------ */
 .third-page {
   display: flex;
   width: 100%;
@@ -12,27 +16,23 @@
   align-items: center;
   background-color: #b50014;
 }
-
 .left-half ul {
   display: flex;
   flex-direction: column;
   height: 100%;
   align-items: start;
 }
-
 .left-half .text-container h2 {
   font-size: 32px;
   color: #ffffff;
   margin-bottom: 15px;
 }
-
 .left-half .text-container ul li {
   color: #ffffff;
   list-style-type: disc;
   text-align: left;
   margin-bottom: 12px;
 }
-
 .left-half .text-container .button-container {
   display: flex;
   justify-content: space-between;
@@ -40,7 +40,6 @@
   margin-top: 50px;
   width: 100%;
 }
-
 .left-half .text-container .button-container a:hover {
   background-color: #b50014;
   color: white;
@@ -54,18 +53,15 @@
   justify-content: center;
   align-items: center;
 }
-
 .right-half .right-half-img-cont {
   height: 100%;
 }
-
 .right-half .right-half-img-cont img {
   width: 100%;
   height: 100%;
 }
 
-/* MOBILE RESPONSIVE */
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
   .third-page {
     display: block;
     flex-direction: column;
@@ -89,42 +85,15 @@
     justify-content: center;
   }
   .left-half .text-container h2:nth-child(1) {
-    margin: 30px 0 0;
+    margin: 50px 0 0;
   }
   .left-half .text-container h2:nth-child(2) {
-    margin: 0 0 30px;
-  }
-  .left-half-spans {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-    color: white;
-  }
-  .left-half-spans span {
-    text-align: center;
-    width: 100%;
-    margin-bottom: 20px;
-    font-weight: 300;
-  }
-  .left-half-spans span::before {
-    content: "•";
-    margin-right: 8px;
-  }
-  .left-half .button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding: 0;
-    margin-bottom: 30px;
+    margin: 0 0 50px;
   }
   .left-half .text-container .button-container a {
     text-decoration: none;
     border-radius: 24px;
-    border: 1px solid #b50014;
+    border: 1px solid red;
     background-color: white;
     display: flex;
     justify-content: center;
@@ -140,6 +109,34 @@
     border: 1px solid white;
     font-size: 20px;
   }
+  .left-half .button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 30px;
+  }
+  .left-half-spans {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    color: white;
+  }
+  .left-half-spans span {
+    text-align: center;
+    width: 150%;
+    margin-bottom: 20px;
+    font-weight: 300;
+    font-size: 16px;
+  }
+  .left-half-spans span::before {
+    content: "•";
+    margin-right: 8px;
+  }
   .right-half {
     width: 100%;
     height: 40%;
@@ -149,13 +146,11 @@
     height: 100%;
   }
 }
-/* ------ END MOBILE RESPONSIVE ------ */
-/* DESKTOP RESPONSIVE */
-@media (min-width: 1100px) {
+@media (min-width: 1000px) {
   .third-page {
     display: flex;
     width: 100%;
-    height: 80vh;
+    height: 65vh;
   }
   .left-half {
     flex: 1;
@@ -174,24 +169,6 @@
   }
   .left-half .text-container h2:nth-child(2) {
     margin: 0 0 30px;
-  }
-  .left-half-spans {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    width: 60%;
-    color: white;
-  }
-  .left-half-spans span {
-    text-align: left;
-    width: 200%;
-    margin-bottom: 20px;
-    font-weight: 300;
-  }
-  .left-half-spans span::before {
-    content: "•";
-    margin-right: 8px;
   }
   .left-half .text-container .button-container {
     display: flex;
@@ -219,6 +196,24 @@
     border: 1px solid white;
     font-size: 20px;
   }
+  .left-half-spans {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    width: 60%;
+    color: white;
+  }
+  .left-half-spans span {
+    text-align: left;
+    width: 200%;
+    margin-bottom: 20px;
+    font-weight: 300;
+  }
+  .left-half-spans span::before {
+    content: "•";
+    margin-right: 8px;
+  }
   .right-half {
     flex: 1;
     display: flex;
@@ -230,4 +225,3 @@
     height: 100%;
   }
 }
-/* ------ END DESKTOP RESPONSIVE ------ */
