--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -1,13 +1,18 @@
+$color_1: #fff;
+$color_2: white;
+$color_3: #b50014;
+$background-color_1: #b50014;
+$background-color_2: rgba(0, 0, 0, 0.5);
+
+/* MOBILNI UREDJAJI */
 nav {
   z-index: 10;
   position: absolute;
 }
-
 .nav-divider {
   display: flex;
 }
-
-@media (min-width: 1100px) {
+@media (min-width: 1000px) {
   nav {
     display: flex;
     flex-direction: row;
@@ -15,98 +20,116 @@ nav {
     top: 0;
     width: 100%;
     height: 75px;
-    background-color: #b50014;
+    background-color: $background-color_1;
     justify-content: center;
+    .icon {
+      img {
+        width: 80%;
+      }
+    }
   }
-
-  nav .icon img {
-    width: 80%;
-  }
-
   ul {
     display: flex;
     flex-direction: row;
     list-style: none;
     height: 100%;
     align-items: center;
+    li {
+      a {
+        color: $color_1;
+        text-decoration: none;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+      }
+    }
   }
-
-  ul li {
-    margin-inline: 1px;
-  }
-
-  ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
-
   .download-btn {
     margin-top: auto;
     margin-bottom: auto;
-    color: #fff;
+    color: $color_1;
     text-decoration: none;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
   }
-
   .toggle-nav {
     display: none;
   }
-
   .nav-underline {
     display: flex;
   }
-
   .nav-time {
     display: flex;
     flex-direction: row;
-    margin-left: auto;
-    color: white;
+    margin-left: 53%;
+    color: $color_2;
     width: fit-content;
-    margin-right: 15px;
+    margin-right: 1.5%;
+    span {
+      i {
+        margin-right: 5px;
+      }
+    }
   }
 }
-
 @media (min-width: 1300px) {
   .nav-divider {
     flex-direction: row;
     width: fit-content;
   }
-
-  ul li {
-    margin-right: 20px;
+  ul {
+    li {
+      margin-right: 20px;
+    }
   }
 }
-
-@media (min-width: 1100px) AND (max-width: 1299px) {
+@media (min-width: 1000px) AND (max-width: 1100px) {
+  ul {
+    li {
+      margin-right: -10px;
+    }
+  }
+  .nav-time {
+    display: flex;
+    flex-direction: row;
+    margin-left: 52%;
+    color: $color_2;
+    width: fit-content;
+    margin-right: 0.5%;
+  }
+}
+@media (min-width: 1000px) AND (max-width: 1299px) {
   .nav-divider {
     flex-direction: row;
     width: fit-content;
+    ul {
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+      margin: 0;
+    }
   }
-
-  .nav-divider ul {
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    margin: 0;
-  }
-
-  ul li {
-    width: 100px;
+  .nav-time {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    margin-left: 52%;
+    color: $color_2;
+    width: fit-content;
+    margin-right: 1.5%;
+  }
+  ul {
+    li {
+      width: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
-
-/* MOBILNI UREDJAJI */
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
   nav {
     display: flex;
     flex-direction: row;
@@ -114,24 +137,24 @@ nav {
     top: 0;
     width: 100%;
     height: 75px;
-    background-color: #b50014;
+    background-color: $background-color_1;
+    .icon {
+      img {
+        width: 60%;
+      }
+    }
   }
-  nav .icon img {
-    width: 60%;
-  }
-
   .toggle-nav {
     display: flex;
     position: absolute;
     width: fit-content;
     height: fit-content;
     font-size: 43px;
-    color: white;
+    color: $color_2;
     right: 16px;
     top: 16px;
     text-decoration: none;
   }
-
   ul {
     display: flex;
     position: fixed;
@@ -141,74 +164,64 @@ nav {
     width: 300px;
     flex-direction: column;
     list-style: none;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: $background-color_2;
     transform: translateX(100%);
+    li {
+      width: 100%;
+      height: 50px;
+      a {
+        text-decoration: none;
+        font-size: 16px;
+        color: $color_2;
+        display: block;
+        text-align: center;
+        &:focus {
+          color: $color_3;
+        }
+      }
+    }
+    .nav-divider {
+      &:first-child {
+        margin-top: 60px;
+      }
+    }
   }
-
   ul.active {
     transform: translateX(0);
   }
-
   .nav-divider {
     display: flex;
     flex-direction: column;
   }
-
-  ul li {
-    width: 100%;
-    height: 50px;
-  }
-
-  ul .nav-divider:first-child {
-    margin-top: 60px;
-  }
-
-  ul li a {
-    text-decoration: none;
-    font-size: 16px;
-    color: white;
-    display: block;
-    text-align: center;
-  }
-
-  ul li a:focus {
-    color: #b50014;
-  }
-
   .nav-underline {
     display: flex;
   }
-
   .nav-time {
     display: flex;
     flex-direction: column;
     margin-left: auto;
-    color: white;
+    color: $color_2;
     width: fit-content;
     margin-right: 15px;
     margin-top: 75px;
+    span {
+      width: 100%;
+      &:first-child {
+        text-align: right;
+      }
+    }
   }
-
-  .nav-time span {
-    width: 100%;
-  }
-
-  .nav-time span:first-child {
-    text-align: right;
-  }
-
   .download-btn {
     margin: auto 83px auto auto;
-    color: #fff;
+    color: $color_1;
     text-decoration: none;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-  }
-
-  .download-btn i {
-    font-size: 40px;
-    margin-right: 8px;
+    i {
+      font-size: 40px;
+      margin-right: 8px;
+    }
   }
 }
