--- a/sass/second_page.scss
+++ b/sass/second_page.scss
@@ -56,7 +56,6 @@ $background-color_3: ghostwhite;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-inline: 50px;
   margin-top: 60px;
   a {
     text-decoration: none;
@@ -83,22 +82,29 @@ $background-color_3: ghostwhite;
   width: 65%;
   height: 100%;
   display: block;
+  margin-left: 20px;
 }
 .big-image {
   height: 66.6%;
+  margin-bottom: 8px;
+  img {
+    height: 100%;
+    width: 100%;
+  }
 }
 .small-images-container {
   display: flex;
   img {
+    margin-right: 8px;
     width: 33.3%;
   }
 }
-@media (min-width: 1100px) {
+@media (min-width: 1000px) {
   .hide-on-big {
     display: none;
   }
 }
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
   .hide {
     display: none;
   }
@@ -121,6 +127,7 @@ $background-color_3: ghostwhite;
     p {
       margin-top: 10px;
       padding-bottom: 3px;
+      font-size: 16px;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -129,20 +136,27 @@ $background-color_3: ghostwhite;
       font-size: 16px;
       text-align: center;
     }
+    h1 {
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      font-size: 38px;
+      font-weight: 700;
+      line-height: 42px;
+      &:nth-child(2) {
+        font-size: 38px;
+        margin-bottom: 20px;
+      }
+    }
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
     align-items: center;
     width: 90%;
-    h1 {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      font-size: 32px;
-    }
     h2 {
       font-size: 22px;
     }
